--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: studio22-app
     env: node
     plan: free
-    buildCommand: npm install && npx prisma generate
+    buildCommand: npm install && npx prisma generate && npx prisma db push
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
